--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,9 @@ ul {
   background-position: center;
 }
 .advantages-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 270px;
   height: 120px;
   border-radius: 4px;
@@ -280,7 +283,7 @@ ul {
 .antenna-icon {
   width: 70px;
   height: 70px;
-
+ 
 }
 .clock-icon {
   width: 67px;
@@ -438,7 +441,9 @@ ul {
 }
 
 .network-link {
-  display: block; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -451,6 +456,7 @@ ul {
 .twitter-svg,
 .facebook-svg,
 .linkedin-svg {
+  display: inl;
   fill: #AFB1B8;
   background-position: 50% 50%; 
 }
@@ -645,7 +651,7 @@ background-size: 20px 20px;
 }
 .sign {
   font-weight: 900;
-  display: block;
+  display: flex;
   width: 200px;
   height: 50px;
   margin-top: 21px;
@@ -653,14 +659,13 @@ background-size: 20px 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-.sign::after {
-  content: "";
-  width: 24px;
-  height: 24px;
-  background-image: url(../images/icon-send.svg);
+
+.icon-sign {
+  display: flex;
   margin-left: 10px;
-  background-size: contain;
+  fill: var(--white-color);
 }
+
 
 /*Порфолио main */
 
